@@ -1219,13 +1219,14 @@ BEGIN
     RTEXT           "Static",IDC_ZIOOTHER_V,184,57,63,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZIOOTHERBYTES_V,184,67,63,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZIOPRIORITY_V,184,77,63,8,SS_ENDELLIPSIS
-    GROUPBOX        "Other",IDC_STATIC,131,92,122,43
+    GROUPBOX        "Other",IDC_STATIC,131,92,122,60
     LTEXT           "Handles",IDC_STATIC,138,102,26,8
     LTEXT           "GDI Handles",IDC_STATIC,138,112,40,8
     LTEXT           "USER Handles",IDC_STATIC,138,122,46,8
     RTEXT           "Static",IDC_ZHANDLES_V,193,102,54,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZGDIHANDLES_V,193,112,54,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZUSERHANDLES_V,193,122,54,8,SS_ENDELLIPSIS
+    PUSHBUTTON      "Details",IDC_DETAILS,137,133,50,14
 END
 
 IDD_OPTADVANCED DIALOGEX 0, 0, 250, 85
@@ -1455,6 +1456,15 @@ BEGIN
     LTEXT           "Version:",IDC_STATIC,183,141,27,8
     EDITTEXT        IDC_VERSION,215,141,59,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     PUSHBUTTON      "Cleanup",IDC_CLEANUP,7,239,50,14
+END
+
+IDD_HANDLESTATS DIALOGEX 0, 0, 219, 175
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Handle Statistics"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "Close",IDOK,162,154,50,14
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,205,143
 END
 
 
@@ -1880,6 +1890,14 @@ BEGIN
         RIGHTMARGIN, 284
         TOPMARGIN, 7
         BOTTOMMARGIN, 253
+    END
+
+    IDD_HANDLESTATS, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 212
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 168
     END
 END
 #endif    // APSTUDIO_INVOKED
